cf_analysis_results/checkerframework_3.43.0_WPI_results_JDK_11/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8.txt
../dataset/june2020_dataset_copy/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:112: error: (required.method.not.called) $$ 4 $$ method close $$ response $$ java.io.InputStream $$ regular method exit $$ ( 2672, 2699 ) $$ @MustCall method close may not have been invoked on response or any of its aliases.
			response = url.openStream();
			         ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: regular method exit
1 error
